2025-11-12T00:45:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19282676657 # 806
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 245 279 / 249 283
* notice: next accum: outdated-unq outdated-all / unq all: 246 280 / 249 283
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-28] / []

2025-11-11T00:45:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19251026554 # 805
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 244 278 / 249 283
* notice: next accum: outdated-unq outdated-all / unq all: 245 279 / 249 283
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-27] / []

2025-11-08T00:41:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19185173678 # 802
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-08
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 244 278 / 248 282
* notice: next accum: outdated-unq outdated-all / unq all: 244 278 / 249 283
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-07]

2025-11-06T00:44:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19121003591 # 800