@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-12T00:45:45Z",
-  "count_outdated" : 280,
-  "uniques_outdated" : 246,
+  "timestamp" : "2025-11-15T00:44:16Z",
+  "count_outdated" : 282,
+  "uniques_outdated" : 248,
   "count" : 283,
   "uniques" : 249,
   "clones" : [
-    {
-      "timestamp": "2025-10-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-11-07T00:00:00Z",
       "count": 1,
